--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>MobilePlanet</h1>
 
     <script src="/Pilas/ejercicio3.js"></script>
+    <script src="/colas/Ejercicio1.js"></script>
   </body>
 </html>
