actualizacion hasta clase 10

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   </head>
   <body>
     <h1>MobilePlanet</h1>
-
-    <script src="/Pilas/ejercicio3.js"></script>
-    <script src="/colas/Ejercicio1.js"></script>
+    <script src="4.estructuraDatos/array/array3.js"></script>
   </body>
 </html>
