--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>MobilePlanet</h1>
-    <script src="4.estructuraDatos/array/array3.js"></script>
+
+    <script src="/4.estructuraDatos/parametrosRest/paramsRes1.js"></script>
   </body>
 </html>
